--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,5 @@
 
-name: CI/CD FastAPI
+name: CI/CD MYFastAPI
 
 on:
   push:
@@ -54,5 +54,5 @@ jobs:
       # 3. Construire et pousser l'image Docker OK
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/fastapi-api:latest .
-          docker push
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/my-fastapi:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-fastapi:latest
