--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,26 +10,21 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
-
     steps:
-      # 1. Récupérer le code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Installer Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      # 3. Installer les dépendances
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest
 
-      # 4. Lancer les tests
       - name: Run tests
         run: |
           pytest --maxfail=1 --disable-warnings -q
@@ -38,21 +33,26 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test
     if: github.ref == 'refs/heads/main'
-
     steps:
-      # 1. Récupérer le code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Se connecter à DockerHub
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 3. Construire et pousser l'image Docker OK
       - name: Build and push Docker image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/my-fastapi:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/my-fastapi:latest
+
+      - name: Save API URL as artifact
+        run: |
+          echo "Votre image est disponible sur Docker Hub : https://hub.docker.com/r/${{ secrets.DOCKER_USERNAME }}/my-fastapi" > api_url.txt
+
+      - name: Upload API URL artifact
+        uses: actions/upload-artifact@v3
+               with:
+          name: api-url
