--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,3 +57,21 @@ jobs:
         with:
           name: api-url
           path: api_url.txt
+  
+deploy-render:
+  runs-on: ubuntu-latest
+  needs: docker-deploy
+  if: github.ref == 'refs/heads/main'
+  steps:
+    - name: Déployer sur Render
+      run: |
+        curl -X POST \
+        -H "Accept: application/json" \
+        -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+        -H "Content-Type: application/json" \
+        -d '{
+          "serviceId": "${{ secrets.ID_SERVICE_RENDER }}",
+          "clearCache": false
+        }' \
+        https://api.render.com/v1/services
+
