--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
 
 jobs:
+  # -------------------------
+  # 1. Job : Build & Test (CI)
+  # -------------------------
   build-test:
     runs-on: ubuntu-latest
     steps:
@@ -28,7 +31,9 @@ jobs:
       - name: Run tests
         run: |
           pytest --maxfail=1 --disable-warnings -q
-
+  # -------------------------
+  # 2. Job : Build & Push Docker Image (CD)
+  # -------------------------
   docker-deploy:
     runs-on: ubuntu-latest
     needs: build-test
@@ -57,21 +62,19 @@ jobs:
         with:
           name: api-url
           path: api_url.txt
-  
-deploy-render:
-  runs-on: ubuntu-latest
-  needs: docker-deploy
-  if: github.ref == 'refs/heads/main'
-  steps:
-    - name: Déployer sur Render
-      run: |
-        curl -X POST \
-        -H "Accept: application/json" \
-        -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-        -H "Content-Type: application/json" \
-        -d '{
-          "serviceId": "${{ secrets.ID_SERVICE_RENDER }}",
-          "clearCache": false
-        }' \
-        https://api.render.com/v1/services
-
+  # -------------------------
+  # 3. Job : Déploiement sur Render
+  # -------------------------
+  deploy-render:
+    runs-on: ubuntu-latest
+    needs: docker-deploy
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Déployer sur Render
+        run: |
+          curl -X POST \
+          -H "Accept: application/json" \
+          -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+          -H "Content-Type: application/json" \
+          -d '{"clearCache": false}' \
+          https://api.render.com/v1/services/${{ secrets.ID_SERVICE_RENDER }}/deploys
